fix footer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,18 @@ a {
     cursor: pointer;
 }   
 
+.about-button {
+    display: none;
+    margin: 20px;
+    text-align: center;
+    transition: ease 500ms;
+}
 
+.about-button:hover {
+    cursor: pointer;
+    color: blue;
+    transition: ease 500ms;
+}
 
 
 /* DITCH ALL THE MENU CODE HERE AND IN JS !!!!! */
@@ -390,8 +401,9 @@ a {
 
 #footer {
     position: fixed;
-    bottom: 10px;
-    right: 10px;
+    bottom: 0;
+    right: 0;
+    margin: 10px;
     font-size: 8pt;
 }
 
@@ -432,17 +444,18 @@ a {
         border-bottom: none;
         border-top: black solid 1px;
     }
-
     #project-list {
         height: 30vh;
     }
-
     #footer {
         /* padding: 0 10px 0 0; */
         width: 100%;
         text-align: right;
         font-size: 6pt;
         background-color: white;
+    }
+    .about-button {
+        display: block;
     }
 
 }
